deploy/kind/controller.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: garden-f5-system
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gardener-extension-f5
  namespace: garden-f5-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gardener-extension-f5
  template:
    metadata:
      labels:
        app: gardener-extension-f5
    spec:
      serviceAccountName: gardener-extension-f5
      containers:
        - name: controller
          image: gardener-extension-f5:dev
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              memory: 256Mi
